# jirust

./: '  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  call_from_api.txt  compose.yaml  sample.toml  test
.github/: FUNDING.yml
.github/workflows/: pr.yml  publish.yml  release.yml  rust.yml  tag-bump.yml
src/: activity_manager.rs  app.rs  components.rs  config.rs  event.rs  events.rs  jira.rs  jtui.rs  log.rs  main.rs  ui.rs  widgets.rs
src/components/: commands.rs  error.rs  issues.rs  projects.rs  tickets.rs  tickets_metadata.rs
src/event/: event.rs  key.rs
src/jira/: auth.rs  issue.rs  jira_db.rs  project_components.rs  projects.rs  tickets.rs
src/jtui/: home.rs  issues.rs  projects.rs
src/ui/: activities.rs
src/ui/activities/: activities.rs  projects.rs
src/widgets/: commands.rs  comments.rs  comments_add.rs  comments_popup.rs  components.rs  create_ticket.rs  description.rs  error.rs  help.rs  labels.rs  parent.rs  projects.rs  search_projects.rs  search_tickets.rs  ticket_relation.rs  ticket_transition.rs  tickets.rs
