[package]
name = "jirust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_with = { version = "1.4.0", features = ["json"]}

crossterm = "0.25.0"

tui = "0.19.0"

reqwest = "0.11.11"

futures = "0.3.26"

tokio = { version = "1.12.0", features = ["full"] }
serde-aux = "4.1.2"
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem"] }
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.23"
anyhow = "1.0.68"
async-trait = "0.1.64"
structopt = "0.3.26"
env_logger = "0.10.0"
base64 = "0.21.0"
html2md = "0.2.14"
# async-recursion = "1.0.0"
# rusqlite = "0.28.0"

[patch.crates-io]
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", rev = "c3773b2e5759e119cb5406c8d15cd8f8065f4761"}
