[package]
name = "jirust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_with = { version = "1.4.0", features = ["json"]}

crossterm = "0.25.0"

tui = { package = "ratatui" }

reqwest = { version = "0.11.11", features = ["default", "json"] }

futures = "0.3.26"

tokio = { version = "1.12.0", features = ["full"] }
serde-aux = "4.1.2"
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem"] }
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.23"
anyhow = { version = "1.0.68", features = ["backtrace"] }
async-trait = "0.1.64"
structopt = "0.3.26"
env_logger = "0.10.0"
base64 = "0.21.0"
html2md = "0.2.14"
markdown = "0.3.0"
htmltoadf = "0.1.7"
# simsearch = "0.2"
# aho-corasick = "0.7.20"
simsearch = "0.2.4"
# rust-fuzzy-search = "0.1.1"
# async-recursion = "1.0.0"
# rusqlite = "0.28.0"

[patch.crates-io]
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", rev = "c3773b2e5759e119cb5406c8d15cd8f8065f4761"}
