[package]
authors = ["Akhter (Mo) Ali <akali1987@gmail.com"]
name = "jirust"
description = "A JIRA terminal user interface"
edition = "2021"
homepage = "https://github.com/moali87/jirust"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/moali87/jirust"
version = "1.1.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = ">=0.10.55"
webpki = ">=0.22.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_with = { version = "1.4.0", features = ["json"]}

crossterm = "0.25.0"

tui = { package = "ratatui", version = "0.20.1" }

reqwest = { version = "0.11.11", features = ["default", "json"] }

futures = "0.3.26"

tokio = { version = "1.12.0", features = ["full"] }
serde-aux = "4.1.2"
surrealdb = { version = "1.0.0", features = ["kv-mem", "kv-rocksdb"] }
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.23"
anyhow = { version = "1.0.68", features = ["backtrace"] }
async-trait = "0.1.64"
structopt = "0.3.26"
env_logger = "0.10.0"
base64 = "0.21.0"
html2md = "0.2.14"
markdown = "0.3.0"
htmltoadf = "0.1.7"
simsearch = "0.2.4"
open = "4.1.0"
itertools = "0.10.5"
toml = "0.7.3"
rustls-webpki = ">=0.101.4"
time = ">=0.2.23"
tungstenite = ">=0.20.1"
cargo-bump = "1.1.0"
cargo-release = "0.24.12"
